# aruco_detection

./: .gitignore
item_pose_service/: package.xml  setup.cfg  setup.py
item_pose_service/item_pose_service/: item_info.yaml  item_pose_client_node.py  item_pose_server_node.py  pose_node.py  server_run.py
item_tools_interfaces/: CMakeLists.txt  package.xml
item_tools_interfaces/srv/: GetItemPoses.srv
